# nova-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/auth-agent/0.0.1/: agent.py  metadata.json
agents/auth-agent/0.0.17/: agent.py  metadata.json
agents/auth-agent/0.0.18/: agent.py  metadata.json
agents/manager-agent/0.0.1/: agent.py  metadata.json
agents/manager-agent/0.0.16/: agent.py  metadata.json
agents/manager-agent/0.0.17/: agent.py  metadata.json
agents/manager-agent/0.0.18/: metadata.json
agents/storage-agent/0.0.1/: agent.py  metadata.json
agents/storage-agent/0.0.39/: agent.py  metadata.json
agents/storage-agent/0.0.52/: agent.py  metadata.json
agents/storage-agent/0.0.9/: agent.py  metadata.json
agents/upload-agent/0.0.1/: agent.py  metadata.json
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/: test_basics.rs
mcp-server/: pyproject.toml  requirements.txt  server.py  test_retrieve.py  test_upload.py
nova-sdk-rs/: .env.example  CHANGELOG.md  Cargo.toml  LICENSE  README.MD
nova-sdk-rs/examples/: group_management.rs  key_rotation.rs  simple_upload.rs
nova-sdk-rs/src/: lib.rs
nova-sdk-rs/tests/: integration.rs
