[package]
name = "nova"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jcarbonnell/nova-sdk"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.16"
borsh = "1.5.0"

[dev-dependencies]
near-sdk = { version = "5.16", features = ["unit-testing"] }
near-workspaces = { version = "0.21", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[package.metadata.near.reproducible_build]
build_rust_version = "1.82.0"
build_commit = "af0a9881f325e639acc81f2a6bff936ee4044f08"
image = "rust:1.82-slim"  # Docker image
image_digest = "sha256:1111c28d995d06a7863ba6cea3b3dcb87bebe65af8ec5517caaf2c8c26f38010"
build_rustflags = ["--cfg", "tokio_unstable"]
depends_on = [
    "borsh:1.5.0",
    "near-sdk:5.16.0",
]