[package]
name = "nova-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
near-jsonrpc-client = "0.18.0"
near-primitives = "0.31.1"
near-crypto = "0.31.1"
near-jsonrpc-primitives = "0.31.1"
thiserror = "2.0.17"
base64 = "0.22"
serde_json = "1.0.145"
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["multipart", "json"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15"
ctor = "0.2"
rand = "0.8"