[package]
name = "nova-sdk-rs"
version = "0.1.0"
edition = "2021"
description = "Lightweight Rust SDK for NOVA: Secure group-based file sharing on NEAR Protocol with IPFS integration."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcarbonnell/nova/tree/main/nova-sdk-rs"
categories = ["cryptography", "blockchain"]
keywords = ["near-protocol", "ipfs", "cryptography", "file-sharing", "access-control"]

[dependencies]
near-jsonrpc-client = "0.18.0"
near-primitives = "0.31.1"
near-crypto = "0.31.1"
near-jsonrpc-primitives = "0.31.1"
thiserror = "2.0.17"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
aes = "0.8.4"
cbc = "0.1.2"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["multipart", "json"] }
rand = "0.8"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15"
ctor = "0.2"
rand = "0.8"